Sjabloon drastisch aangepast

--- a/word2stoptpod/input/Sjabloon.ini
+++ b/word2stoptpod/input/Sjabloon.ini
@@ -674,18 +674,34 @@ Aantal=5
 4=berekend|http://standaarden.omgevingswet.overheid.nl/bronnauwkeurigheid/id/concept/Berekend
 5=anders|http://standaarden.omgevingswet.overheid.nl/bronnauwkeurigheid/id/concept/Anders
 
+[soort besluit]
+Aantal=2
+1=Compact|BesluitCompact
+2=Klassiek|BesluitKlassiek
+
 [soort regeling]
 Aantal=10
-1=AMvB|/join/id/stop/regelingtype_001
-2=Ministeriële Regeling|/join/id/stop/regelingtype_002
-3=Omgevingsplan|/join/id/stop/regelingtype_003
-4=Omgevingsverordening|/join/id/stop/regelingtype_004
-5=Waterschapsverordening|/join/id/stop/regelingtype_005
-6=Omgevingsvisie|/join/id/stop/regelingtype_006
-7=Projectbesluit|/join/id/stop/regelingtype_007
-8=Instructie|/join/id/stop/regelingtype_008
-9=Voorbeschermingsregels|/join/id/stop/regelingtype_009
-10=Programma|/join/id/stop/regelingtype_010
+1=AMvB|RegelingKlassiek
+2=Ministeriële Regeling|RegelingKlassiek
+3=Omgevingsplan|RegelingCompact
+4=Omgevingsverordening|RegelingCompact
+5=Waterschapsverordening|RegelingCompact
+6=Omgevingsvisie|RegelingVrijetekst
+7=Projectbesluit|RegelingVrijetekst
+8=Instructie|RegelingVrijetekst
+9=Voorbeschermingsregels|RegelingTijdelijkdeel
+10=Programma|RegelingVrijetekst
+
+[soort wijziging]
+Aantal=3
+1=Vervang|Vervang
+2=Verwijder|Verwijder
+3=Voeg toe|VoegToe
+
+[soort positie]
+Aantal=2
+1=Komt voor|KomtVoor
+2=Volgt op|VolgtOp
 
 [onderwerp]
 Aantal=95
