diverse bugs gefixed

--- a/word2stoptpod/input/Sjabloon.ini
+++ b/word2stoptpod/input/Sjabloon.ini
@@ -680,7 +680,7 @@ Aantal=2
 2=Klassiek|BesluitKlassiek
 
 [soort regeling]
-Aantal=10
+Aantal=13
 1=AMvB|RegelingKlassiek
 2=Ministeriële Regeling|RegelingKlassiek
 3=Omgevingsplan|RegelingCompact
@@ -691,6 +691,9 @@ Aantal=10
 8=Instructie|RegelingVrijetekst
 9=Voorbeschermingsregels|RegelingTijdelijkdeel
 10=Programma|RegelingVrijetekst
+11=Reactieve interventie|RegelingTijdelijkdeel
+12=Aanwijzingsbesluit N2000|RegelingCompact
+13=Toegangsbeperkingsbesluit|RegelingCompact
 
 [soort wijziging]
 Aantal=3
